--- a/package.json
+++ b/package.json
@@ -1,24 +1,187 @@
 {
-    "name": "calculator",
-    "version": "0.0.1",
-    "description": "cat calculator",
-    "main": "scripts.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "parcel index.html",
-        "build": "parcel build index.html"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/kasperaviciute/calculator.git"
-    },
-    "author": "Simona Kas",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/kasperaviciute/calculator/issues"
-    },
-    "homepage": "https://github.com/kasperaviciute/calculator#readme",
-    "devDependencies": {
-        "parcel-bundler": "^1.12.4"
-    }
+  "name": "calculator",
+  "version": "0.0.1",
+  "description": "cat calculator",
+  "main": "scripts.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "parcel index.html",
+    "build": "parcel build index.html"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kasperaviciute/calculator.git"
+  },
+  "author": "Simona Kas",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kasperaviciute/calculator/issues"
+  },
+  "homepage": "https://github.com/kasperaviciute/calculator#readme",
+  "devDependencies": {
+    "parcel-bundler": "^1.12.4"
+  },
+  "dependencies": {
+    "ansi-regex": "^3.0.0",
+    "ansi-styles": "^3.2.1",
+    "arr-diff": "^4.0.0",
+    "arr-union": "^3.1.0",
+    "array-equal": "^1.0.0",
+    "arr-flatten": "^1.1.0",
+    "array-unique": "^0.3.2",
+    "assert-plus": "^1.0.0",
+    "assign-symbols": "^1.0.0",
+    "async-limiter": "^1.0.1",
+    "async-each": "^1.0.3",
+    "atob": "^2.1.2",
+    "asynckit": "^0.4.0",
+    "aws-sign2": "^0.7.0",
+    "aws4": "^1.10.1",
+    "babel-runtime": "^6.26.0",
+    "balanced-match": "^1.0.0",
+    "base64-js": "^1.3.1",
+    "binary-extensions": "^1.13.1",
+    "bn.js": "^5.1.3",
+    "brace-expansion": "^1.1.11",
+    "bindings": "^1.5.0",
+    "boolbase": "^1.0.0",
+    "brorand": "^1.1.0",
+    "browser-process-hrtime": "^1.0.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^4.9.2",
+    "buffer-equal": "^0.0.1",
+    "buffer-from": "^1.1.1",
+    "buffer-xor": "^1.0.3",
+    "builtin-status-codes": "^3.0.0",
+    "call-me-maybe": "^1.0.1",
+    "caller-callsite": "^2.0.0",
+    "caller-path": "^2.0.0",
+    "callsites": "^2.0.0",
+    "caniuse-lite": "^1.0.30001129",
+    "caseless": "^0.12.0",
+    "cli-spinners": "^1.3.1",
+    "color-convert": "^1.9.3",
+    "color-name": "^1.1.3",
+    "combined-stream": "^1.0.8",
+    "commander": "^2.20.3",
+    "component-emitter": "^1.3.0",
+    "concat-map": "^0.0.1",
+    "console-browserify": "^1.2.0",
+    "constants-browserify": "^1.0.0",
+    "core-js": "^2.6.11",
+    "copy-descriptor": "^0.1.1",
+    "core-util-is": "^1.0.2",
+    "css-color-names": "^0.0.4",
+    "css-select-base-adapter": "^0.1.1",
+    "css-selector-tokenizer": "^0.7.3",
+    "css-what": "^3.3.0",
+    "cssesc": "^3.0.0",
+    "cssnano-util-get-arguments": "^4.0.0",
+    "cssnano-util-get-match": "^4.0.0",
+    "cssnano-util-same-parent": "^4.0.1",
+    "cssom": "^0.3.8",
+    "cssstyle": "^1.4.0",
+    "dashdash": "^1.14.1",
+    "defaults": "^1.0.3",
+    "deep-is": "^0.1.3",
+    "define-property": "^2.0.2",
+    "delayed-stream": "^1.0.0",
+    "decode-uri-component": "^0.2.0",
+    "depd": "^1.1.2",
+    "destroy": "^1.0.4",
+    "dom-serializer": "^0.2.2",
+    "domain-browser": "^1.2.0",
+    "domelementtype": "^1.3.1",
+    "domhandler": "^2.4.2",
+    "domutils": "^1.7.0",
+    "dot-prop": "^5.3.0",
+    "ee-first": "^1.1.1",
+    "electron-to-chromium": "^1.3.567",
+    "encodeurl": "^1.0.2",
+    "entities": "^1.1.2",
+    "error-ex": "^1.3.2",
+    "escalade": "^3.1.0",
+    "es-to-primitive": "^1.2.1",
+    "escape-html": "^1.0.3",
+    "escape-string-regexp": "^1.0.5",
+    "esprima": "^3.1.3",
+    "estraverse": "^4.3.0",
+    "esutils": "^2.0.3",
+    "etag": "^1.8.1",
+    "events": "^3.2.0",
+    "extend": "^3.0.2",
+    "extend-shallow": "^3.0.2",
+    "extsprintf": "^1.3.0",
+    "fast-deep-equal": "^3.1.3",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-levenshtein": "^2.0.6",
+    "fastparse": "^1.1.2",
+    "file-uri-to-path": "^1.0.0",
+    "for-in": "^1.0.2",
+    "foreach": "^2.0.5",
+    "forever-agent": "^0.6.1",
+    "fresh": "^0.5.2",
+    "fs.realpath": "^1.0.0",
+    "gensync": "^1.0.0-beta.1",
+    "function-bind": "^1.1.1",
+    "get-value": "^2.0.6",
+    "getpass": "^0.1.7",
+    "glob-to-regexp": "^0.3.0",
+    "globals": "^11.12.0",
+    "graceful-fs": "^4.2.4",
+    "har-schema": "^2.0.0",
+    "has": "^1.0.3",
+    "has-ansi": "^2.0.0",
+    "has-flag": "^3.0.0",
+    "has-symbols": "^1.0.1",
+    "has-value": "^1.0.0",
+    "has-values": "^1.0.0",
+    "hex-color-regex": "^1.1.0",
+    "hsl-regex": "^1.0.0",
+    "hsla-regex": "^1.0.0",
+    "html-comment-regex": "^1.1.2",
+    "html-tags": "^1.2.0",
+    "https-browserify": "^1.0.0",
+    "icss-replace-symbols": "^1.1.0",
+    "ieee754": "^1.1.13",
+    "indexes-of": "^1.0.1",
+    "inherits": "^2.0.4",
+    "is-absolute-url": "^2.1.0",
+    "is-accessor-descriptor": "^0.1.6",
+    "is-arrayish": "^0.2.1",
+    "is-buffer": "^1.1.6",
+    "is-binary-path": "^1.0.1",
+    "is-callable": "^1.2.1",
+    "is-data-descriptor": "^0.1.4",
+    "is-date-object": "^1.0.2",
+    "is-descriptor": "^0.1.6",
+    "is-directory": "^0.3.1",
+    "is-extendable": "^0.1.1",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.1",
+    "is-html": "^1.1.0",
+    "is-negative-zero": "^2.0.0",
+    "is-number": "^3.0.0",
+    "is-obj": "^2.0.0",
+    "is-plain-object": "^2.0.4",
+    "is-regex": "^1.1.1",
+    "is-resolvable": "^1.1.0",
+    "is-svg": "^3.0.0",
+    "is-symbol": "^1.0.3",
+    "is-typedarray": "^1.0.0",
+    "is-windows": "^1.0.2",
+    "is-wsl": "^1.1.0",
+    "isarray": "^1.0.0",
+    "isexe": "^2.0.0",
+    "isobject": "^3.0.1",
+    "isstream": "^0.1.2",
+    "js-tokens": "^4.0.0",
+    "jsbn": "^0.1.1",
+    "jsesc": "^2.5.2",
+    "json-parse-better-errors": "^1.0.2",
+    "json-schema": "^0.2.3",
+    "json-schema-traverse": "^0.4.1",
+    "json-stringify-safe": "^5.0.1",
+    "kind-of": "^6.0.3"
+  }
 }
